pagmsupport + tests
svn path=/java/trunk/; revision=2226